grammar.txt
program       -> {var|type|forward|proc} stms

id            -> [A-Za-z][A-Za-z0-9_]*
int           -> [0-9]+ 
string        -> "[^"\n]*"
               | '[^'\n]*'

stms          -> stm { stm } 

stm           -> if | do | fa 
               | 'break' ';' 
               | 'exit' ';'
               | 'return' ';'
               | 'write' exp ';'
               | 'writes' exp ';'
               | exp ';'
               | ';' 

# It might be easiest to just use two look ahead tokens here.
if            -> 'if' Expr '->' stms  { '[]' Expr '->' stms } ifPrime
                    
ifPrime       -> '[]' 'else' '->' stms 'fi'
               | 'fi'

do            -> 'do' Expr '->' stms 'od'

fa            -> 'fa' id ':=' Expr 'to' Expr '->' stms 'af'

proc          -> 'proc' id '(' declist ')' procPrime
procPrime     -> ':' typeid procEnd
               | procEnd
procEnd       -> {type|var} {stms} 'end'


idlist        -> id { ',' id}

var           -> 'var' varlist

varlist       -> idlist ':' typeid { '[' int ']' } { ',' varlist }

forward       -> 'forward' id '(' declist ')'
               | 'forward' id '(' declist ')' ':' typeid

declist       -> idlist ':' typeid { ',' declist }
               | ε

type          -> 'type' id  '=' typeid { '[' int ']' }

typeid        -> id

# rules for exp, with precedence added

Expr          -> Low ExprPrime
ExprPrime     -> '=' Low ExprPrime
               | '!=' Low ExprPrime
               | '>' Low ExprPrime
               | '<' Low ExprPrime
               | '>=' Low ExprPrime
               | '<=' Low ExprPrime
               | ε

Low           -> Med LowPrime
LowPrime      -> '+' LowPrime
               | '-' LowPrime
               | ε


Med           -> High MedPrime
MedPrime      -> '*' Factor MedPrime
               | '/' Factor MedPrime
               | '%' Factor MedPrime
               | ε

High          -> End HighPrime
HighPrime     -> '-' Expr
               | '?' Expr
               | ε

lvalue        -> id lvaluePrime
lvaluePrime   -> '[' Expr ']' lValuePrime
               | ε

End           -> '(' Expr ')'
               | int
               | 'true'
               | 'false'
               | string
               | 'read'
               | id ProcCall
               | lvalue ValueOrAssn

ProcCall      -> '(' Expr { ',' Expr } ')'
               | '(' ')'

ValueOrAssn   -> ':=' Expr
               | ε
